--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -19,4 +19,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  background-image: linear-gradient(235deg, #fdf9f3 0%, #ffffff 100%);
+  height: 100vh;
 }
